Replace line-height with margin on list items to avoid spacing inside the line items and make content more readable.

--- a/BlogToHtml/StaticResources/site.css
+++ b/BlogToHtml/StaticResources/site.css
@@ -36,6 +36,6 @@ h1, h2 {
     padding-left: 1rem;
 }
 
-ol, ul {
-    line-height: 2;
+li {
+    margin-bottom: 1rem;
 }
